ANL: use loyal trait to mark the lack of upkeep
Then spiders got an extra side
The Lvl 0 ones never pay upkeep and got their own macro
The Lvl 2 Guards got the loyal trait

That way it's clearly communicated that all these units don't pay
upkeep, without being obstrusive about the fact.

--- a/data/multiplayer/scenarios/4p_A_New_Land.cfg
+++ b/data/multiplayer/scenarios/4p_A_New_Land.cfg
@@ -391,28 +391,28 @@
         {ANL_PLACE_UNIT 5 "Walking Corpse" 10 25}
         {ANL_PLACE_GUARDIAN 5 "Revenant" 26 18}
         {ANL_PLACE_GUARDIAN 5 "Revenant" 45 32}
-        {ANL_PLACE_GUARDIAN 5 "Walking Corpse" 13 27}
+        {ANL_PLACE_GUARD_L0 5 "Walking Corpse" 13 27}
         # Initial AI units - Side 6
         {ANL_PLACE_UNIT 6 "Goblin Spearman" 50 25}
         {ANL_PLACE_UNIT 6 "Goblin Spearman" 50 25}
         {ANL_PLACE_UNIT 6 "Goblin Spearman" 50 25}
         {ANL_PLACE_GUARDIAN 6 "Orcish Warrior" 34 18}
         {ANL_PLACE_GUARDIAN 6 "Orcish Warrior" 45 24}
-        {ANL_PLACE_GUARDIAN 6 "Goblin Spearman" 47 27}
+        {ANL_PLACE_GUARD_L0 6 "Goblin Spearman" 47 27}
         # Initial AI units - Side 7
         {ANL_PLACE_UNIT 7 "Goblin Spearman" 10 30}
         {ANL_PLACE_UNIT 7 "Goblin Spearman" 10 30}
         {ANL_PLACE_UNIT 7 "Goblin Spearman" 10 30}
         {ANL_PLACE_GUARDIAN 7 "Orcish Warrior" 15 32}
         {ANL_PLACE_GUARDIAN 7 "Orcish Warrior" 26 37}
-        {ANL_PLACE_GUARDIAN 7 "Goblin Spearman" 13 29}
+        {ANL_PLACE_GUARD_L0 7 "Goblin Spearman" 13 29}
         # Initial AI units - Side 8
         {ANL_PLACE_UNIT 8 "Walking Corpse" 50 30}
         {ANL_PLACE_UNIT 8 "Walking Corpse" 50 30}
         {ANL_PLACE_UNIT 8 "Walking Corpse" 50 30}
         {ANL_PLACE_GUARDIAN 8 "Revenant" 15 24}
         {ANL_PLACE_GUARDIAN 8 "Revenant" 34 37}
-        {ANL_PLACE_GUARDIAN 8 "Walking Corpse" 47 29}
+        {ANL_PLACE_GUARD_L0 8 "Walking Corpse" 47 29}
     [/event]
 
     # Setting leader names
