--- a/data/multiplayer/scenarios/ANL_utils/ANL_special_macros.cfg
+++ b/data/multiplayer/scenarios/ANL_utils/ANL_special_macros.cfg
@@ -240,14 +240,26 @@
     {GUARDIAN}
 #enddef
 
-#define ANL_PLACE_GUARDIAN SIDE TYPE X Y
+#define ANL_PLACE_GUARD_L0 SIDE TYPE X Y
+    # same, but with movement restriction
     {NOTRAIT_UNIT {SIDE} {TYPE} {X} {Y} }
     {GUARDIAN}
     [+unit]
         [+modifications]
             {MOVEMENT_RESTRICTION}
         [/modifications]
-        upkeep=loyal
+    [/unit]
+#enddef
+
+#define ANL_PLACE_GUARDIAN SIDE TYPE X Y
+    # same, but with loyal trait
+    {NOTRAIT_UNIT {SIDE} {TYPE} {X} {Y} }
+    {GUARDIAN}
+    [+unit]
+        [+modifications]
+            {MOVEMENT_RESTRICTION}
+            {TRAIT_LOYAL}
+        [/modifications]
     [/unit]
 #enddef
 
