ANL: applying refactoring changes to other files
Changes from the research refactoring can also be applied here:
- only storing sides gold instead of the whole side
- removing helper variable for loop

--- a/data/multiplayer/scenarios/ANL_utils/ANL_help.cfg
+++ b/data/multiplayer/scenarios/ANL_utils/ANL_help.cfg
@@ -84,16 +84,8 @@
             [/have_unit]
         [/show_if]
         [command]
-            [set_variable]
-                name=finished_help
-                value=no
-            [/set_variable]
-
             [while]
-                [variable]
-                    name=finished_help
-                    boolean_equals=no
-                [/variable]
+                [true][/true]
 
                 [do]
                     [message]
@@ -105,10 +97,7 @@
                         [option]
                             label= _ "Done"
                             [command]
-                                [set_variable]
-                                    name=finished_help
-                                    value=yes
-                                [/set_variable]
+                                [break][/break]
                             [/command]
                         [/option]
 
@@ -163,9 +152,6 @@
                     [/message]
                 [/do]
             [/while]
-            [clear_variable]
-                name=finished_help
-            [/clear_variable]
         [/command]
     [/set_menu_item]
 #enddef
