--- a/data/multiplayer/scenarios/ANL_utils/ANL_leader_options.cfg
+++ b/data/multiplayer/scenarios/ANL_utils/ANL_leader_options.cfg
@@ -28,7 +28,7 @@
         label= "<span color='green'>" + "$player_{TARGET_SIDE}.name" + "</span>" # wmllint: ignore no spellcheck
         [show_if]
             [variable]
-                name=leader.gold
+                name=gold
                 greater_than_equal_to=20
             [/variable]
 
@@ -60,7 +60,7 @@
             [/gold]
 
             [set_variable]
-                name=leader.gold
+                name=gold
                 sub=20
             [/set_variable]
 
@@ -211,10 +211,10 @@
             terrain="Gg^Ve,Gg^Vea"
         [/filter_location]
         [command]
-            [store_side]
+            [store_gold]
                 side=$side_number
-                variable=leader
-            [/store_side]
+                variable=gold
+            [/store_gold]
 
             [store_unit]
                 [filter]
