ANL: disable diplomacy actions towards yourself

--- a/data/multiplayer/scenarios/ANL_utils/ANL_leader_options.cfg
+++ b/data/multiplayer/scenarios/ANL_utils/ANL_leader_options.cfg
@@ -36,6 +36,11 @@
                 side={TARGET_SIDE}
                 canrecruit=yes
             [/have_unit]
+
+            [variable]
+                name=side_number
+                numerical_not_equals={TARGET_SIDE}
+            [/variable]
         [/show_if]
         [command]
             [set_variable]
@@ -83,6 +88,11 @@
                 side={TARGET_SIDE}
                 canrecruit=yes
             [/have_unit]
+
+            [variable]
+                name=side_number
+                numerical_not_equals={TARGET_SIDE}
+            [/variable]
         [/show_if]
         [command]
             [set_variable]
@@ -122,6 +132,11 @@
                 side={TARGET_SIDE}
                 canrecruit=yes
             [/have_unit]
+
+            [variable]
+                name=side_number
+                numerical_not_equals={TARGET_SIDE}
+            [/variable]
         [/show_if]
         [command]
             [set_variable]
@@ -157,17 +172,20 @@
                 greater_than=$player_{TARGET_SIDE}.warfare.target
             [/variable]
 
-            [and]
-                [variable]
-                    name=player_{TARGET_SIDE}.troops
-                    less_than=7
-                [/variable]
-            [/and]
+            [variable]
+                name=player_{TARGET_SIDE}.troops
+                less_than=7
+            [/variable]
 
             [have_unit]
                 side={TARGET_SIDE}
                 canrecruit=yes
             [/have_unit]
+
+            [variable]
+                name=side_number
+                numerical_not_equals={TARGET_SIDE}
+            [/variable]
         [/show_if]
         [command]
             [set_variable]
