ANL: clear more variables on exit

--- a/data/multiplayer/scenarios/ANL_utils/ANL_leader_options.cfg
+++ b/data/multiplayer/scenarios/ANL_utils/ANL_leader_options.cfg
@@ -612,6 +612,10 @@ Negotiation Progress: $player_$side_number|.leader_option_2.progress|/$player_$s
             [unstore_unit]
                 variable=unit
             [/unstore_unit]
+
+            [clear_variable]
+                name=finished_suboptions,finished_options,gold
+            [/clear_variable]
         [/command]
     [/set_menu_item]
 #enddef
