Add red-grey-green colors, interpolating

--- a/data/schema/core/config.cfg
+++ b/data/schema/core/config.cfg
@@ -35,6 +35,7 @@
 	{SIMPLE_KEY unit_rgb string}
 	{SIMPLE_KEY red_green_scale hex_list}
 	{SIMPLE_KEY red_green_scale_text hex_list}
+	{SIMPLE_KEY red_grey_green_scale hex_list}
 	{SIMPLE_KEY blue_white_scale hex_list}
 	{SIMPLE_KEY blue_white_scale_text hex_list}
 	{SIMPLE_KEY footprint_prefix string}
