--- a/data/game_config.cfg
+++ b/data/game_config.cfg
@@ -41,6 +41,7 @@
     unit_rgb=magenta
     red_green_scale="e60000,ff0000,ff4000,ff8000,ffc000,ffff00,c0ff00,80ff00,40ff00,00ff00,00e600"
     red_green_scale_text="c80000,dd0000,dd3700,dd6e00,dda500,dddd00,a5dd00,6edd00,37dd00,00dd00,00c800"
+    red_grey_green_scale="800000,d00000,d06a6a,d0d0d0,6ad06a,00d000,008000"
     blue_white_scale="00A0E1,FFFFFF,96FFFF,00CDCD,FF00E1,A91EFF,8B00ED,AA00FF"
     blue_white_scale_text="8B00ED,AA00FF,A91EFF,E11EFF,00A0FF,00CDCD,96FFFF,FFFFFF,FFFFFF,FFFFFF,FFFFFF,FFFFFF,FFFFFF,FFFFFF,FFFFFF,FFFFFF"
 
