statistics_dialog: Hide the "This Turn" header when no data is shown in that column

--- a/data/gui/window/statistics_dialog.cfg
+++ b/data/gui/window/statistics_dialog.cfg
@@ -149,8 +149,8 @@
 					border_size = 5
 
 					[label]
+						id = "damage_this_turn_header"
 						definition = "default_small"
-						label = _ "This Turn"
 						linked_group = "cost"
 					[/label]
 				[/column]
