--- a/data/gui/window/statistics_dialog.cfg
+++ b/data/gui/window/statistics_dialog.cfg
@@ -108,7 +108,7 @@
 	[/listbox]
 #enddef
 
-#define _GUI_DAMAGE_STATS_LIST TOP_LEFT_LABEL OVERALL_ID COLID_TYPE COLID_OVERALL COLID_THIS_TURN RATIO_TOOLTIP PERCENT_TOOLTIP
+#define _GUI_DAMAGE_STATS_LIST TOP_LEFT_LABEL THIS_TURN_HEADER_ID OVERALL_ID COLID_TYPE COLID_OVERALL COLID_THIS_TURN RATIO_TOOLTIP PERCENT_TOOLTIP
 	[listbox]
 		id = {OVERALL_ID}
 		definition = "default"
@@ -149,8 +149,8 @@
 					border_size = 5
 
 					[label]
+						id = {THIS_TURN_HEADER_ID}
 						definition = "default_small"
-						label = _ "This Turn"
 						linked_group = "cost"
 					[/label]
 				[/column]
@@ -546,7 +546,7 @@
 											vertical_grow = true
 
 											{_GUI_DAMAGE_STATS_LIST
-											 (_ "Damage") stats_list_damage damage_type damage_overall damage_this_turn
+											 (_ "Damage") damage_this_turn_header stats_list_damage damage_type damage_overall damage_this_turn
 											 (_"stats dialog^Amount of hitpoints (actual / expected)")
 											 (_"stats dialog^Ratio of actual to expected")}
 										[/column]
@@ -563,7 +563,7 @@
 											vertical_grow = true
 
 											{_GUI_DAMAGE_STATS_LIST
-											 (_ "Hits") stats_list_hits hits_type hits_overall hits_this_turn
+											 (_ "Hits") hits_this_turn_header stats_list_hits hits_type hits_overall hits_this_turn
 											 (_"stats dialog^Number of hits (actual / expected)")
 											 (_"stats dialog^<i>A priori</i> probabilities of hitting less than and more than the actual number of hits")}
 										[/column]
