DM S10: Ensure a unit for the role if none is found

--- a/data/campaigns/Delfadors_Memoirs/scenarios/10_The_Gate_Between_Worlds.cfg
+++ b/data/campaigns/Delfadors_Memoirs/scenarios/10_The_Gate_Between_Worlds.cfg
@@ -75,6 +75,14 @@
         [role]
             type=Ghost,Wraith,Shadow,Ghoul,Necrophage,Ghast
             role=dead_sidekick
+            [else]
+                [unit]
+                    side=1
+                    type=Ghost
+                    role=dead_sidekick
+                    x,y=recall,recall
+                [/unit]
+            [/else]
         [/role]
         [recall]
             role=dead_sidekick
