DM S13: Set elf ally side to elvish flag

--- a/data/campaigns/Delfadors_Memoirs/scenarios/13_The_Return_of_Trouble.cfg
+++ b/data/campaigns/Delfadors_Memoirs/scenarios/13_The_Return_of_Trouble.cfg
@@ -166,7 +166,7 @@
         {GOLD 250 250 290}
         team_name=allies
         user_team_name= _ "Elves"
-        {FLAG_VARIANT long}
+        {FLAG_VARIANT wood-elvish}
         [leader]
             id=Clartakis
             name=_ "Clartakis"
