--- a/data/campaigns/Delfadors_Memoirs/scenarios/08_Ur_Thorodor.cfg
+++ b/data/campaigns/Delfadors_Memoirs/scenarios/08_Ur_Thorodor.cfg
@@ -6,6 +6,7 @@
     next_scenario=09_Houses_of_the_Dead
     turns=18
     victory_when_enemies_defeated=no
+    carryover_percentage=0
     {DEFAULT_SCHEDULE}
 
     {SCENARIO_MUSIC elvish-theme.ogg}   # No story part, so no intro music
@@ -121,8 +122,8 @@
             {TURNS_RUN_OUT}
 
             [gold_carryover]
-                bonus=no
-                carryover_percentage=80
+                bonus=no # next scenario is in the Land of the Dead
+                carryover_percentage=0
             [/gold_carryover]
         [/objectives]
     [/event]
