DM S16: Remove unneeded keys & tags

--- a/data/campaigns/Delfadors_Memoirs/scenarios/16_Dark_Sky_Over_Weldyn.cfg
+++ b/data/campaigns/Delfadors_Memoirs/scenarios/16_Dark_Sky_Over_Weldyn.cfg
@@ -5,16 +5,6 @@
     {NO_MAP_DATA}
     next_scenario=17_A_New_Ally
 
-    [side]
-        side=1
-        controller=human
-        gold=0
-        save_id=Player
-        team_name=allies
-        user_team_name= _ "Loyalists"
-        {YOUNG_DELFADOR}
-    [/side]
-
     # Significant plot points: (1) Elves (and, later, others) help buy
     # time for Wesnoth, and (2) Wesnoth changes the army structure to cope
     # with the new threat, instead of having an army focused on orcs
@@ -141,11 +131,10 @@
 
     [event]
         name=prestart
-
         [endlevel]
             result=victory
-            bonus,linger_mode,carryover_report,replay_save=no,no,no,no
-            carryover_percentage=100
+            linger_mode=no
+            replay_save=no
         [/endlevel]
     [/event]
 [/scenario]
