DM: Give traits to some villians

--- a/data/campaigns/Delfadors_Memoirs/utils/characters.cfg
+++ b/data/campaigns/Delfadors_Memoirs/utils/characters.cfg
@@ -160,10 +160,18 @@
     name=_ "Sagus"
     type=Lich
     profile="portraits/undead/brown-lich.png"
+    [modifications]
+        {TRAIT_RESILIENT}
+        {TRAIT_STRONG}
+    [/modifications]
 #enddef
 
 #define ILIAH_MALAL TYPE
     id=Iliah-Malal
     name=_ "Iliah-Malal"
     type={TYPE}
+    [modifications]
+        {TRAIT_DEXTROUS}
+        {TRAIT_RESILIENT}
+    [/modifications]
 #enddef
