DM S01: Improve feel of cutscene
Change map and unit position so nobody walks on top of anyone during moves
Minor key cleanup

--- a/data/campaigns/Delfadors_Memoirs/scenarios/01_Overture.cfg
+++ b/data/campaigns/Delfadors_Memoirs/scenarios/01_Overture.cfg
@@ -21,7 +21,7 @@
         facing=nw
         [unit]
             {METHOR}
-            x,y=18,15
+            x,y=20,16
             facing=nw
         [/unit]
     [/side]
@@ -203,17 +203,9 @@
             speaker=Delfador
             message=_"I am ready."
         [/message]
-        # Using separate tags to ensure Methor moves first
-        [move_unit]
-            id=Methor
-            to_x=13,14,15,16,17,18,19,20
-            to_y=15,15,16,15,16,15,16,16
-        [/move_unit]
-        [move_unit]
-            id=Delfador
-            to_x=13,14,15,16,17,18,19
-            to_y=15,15,16,15,16,15,16
-        [/move_unit]
+        # Move them separately to ensure Methor moves first
+        {MOVE_UNIT id=Methor   20 16}
+        {MOVE_UNIT id=Delfador 19 16}
         [delay]
             time=250
         [/delay]
