statistics_dialog: Show a single value for the quantile.

--- a/data/gui/window/statistics_dialog.cfg
+++ b/data/gui/window/statistics_dialog.cfg
@@ -565,7 +565,9 @@
 											{_GUI_DAMAGE_STATS_LIST
 											 (_ "Hits") hits_this_turn_header stats_list_hits hits_type hits_overall hits_this_turn
 											 (_"stats dialog^Number of hits (actual / expected)")
-											 (_"stats dialog^<i>A priori</i> probabilities of hitting less than and more than the actual number of hits")}
+											 (_"stats dialog^Estimate of how much randomness of battles favored or disfavored this side.
+Values between 0 and 50 suggest the number of hits was less than expected.
+Values between 50 and 100 suggest the number of hits was more than expected.")}
 										[/column]
 
 									[/row]
