ANL: using second portrait for flavor
In this scenario, the player has only two types. Chances are
that the message for freeing a trapped unit may be spoken by
two Spearmans.

--- a/data/multiplayer/scenarios/4p_A_New_Land.cfg
+++ b/data/multiplayer/scenarios/4p_A_New_Land.cfg
@@ -815,6 +815,23 @@
         [/message]
     [/event]
 
+
+    # For flavor – using the second Spearman portrait
+
+    [event]
+        name=post advance
+        [filter]
+            type=Spearman
+        [/filter]
+
+        [modify_unit]
+            [filter]
+                x,y=$x1,$y1
+            [/filter]
+            profile=portraits/humans/spearman-2.png
+        [/modify_unit]
+    [/event]
+
     # ------------------------------------------------------
     # AI Recruitment Pattern
     # ------------------------------------------------------
