DM: Use wmllint who & unwho for characters

--- a/data/campaigns/Delfadors_Memoirs/scenarios/01_Overture.cfg
+++ b/data/campaigns/Delfadors_Memoirs/scenarios/01_Overture.cfg
@@ -20,6 +20,7 @@
         {YOUNG_DELFADOR}
         facing=nw
         [unit]
+            # wmllint: who METHOR is Methor
             {METHOR}
             x,y=20,16
             facing=nw
@@ -186,7 +187,6 @@
         [delay]
             time=500
         [/delay]
-        # wmllint: recognize Methor
         [message]
             speaker=Methor
             message = _ "But I will not see you to its end, for that is yours alone."
