--- a/data/campaigns/Delfadors_Memoirs/scenarios/02_This_Valley_Belongs_to_Me.cfg
+++ b/data/campaigns/Delfadors_Memoirs/scenarios/02_This_Valley_Belongs_to_Me.cfg
@@ -64,7 +64,6 @@
     [/story]
     {DM_TRACK {SEARCH_STAGE2}}
 
-    #wmllint: recognize Methor
     [event]
         name=start
         [message]
@@ -162,4 +161,5 @@
     [/event]
 
     {MEMOIRS_DEATHS}
+    # wmllint: unwho METHOR
 [/scenario]
