--- a/data/campaigns/Delfadors_Memoirs/scenarios/04_Leollyn.cfg
+++ b/data/campaigns/Delfadors_Memoirs/scenarios/04_Leollyn.cfg
@@ -87,6 +87,7 @@
         team_name=allies
         user_team_name= _ "Loyalists"
         {FLAG_VARIANT loyalist}
+        # wmllint: who LEOLLYN is Leollyn
         [leader]
             {LEOLLYN}
             facing=se
