--- a/data/campaigns/Delfadors_Memoirs/scenarios/05_Council_in_Weldyn.cfg
+++ b/data/campaigns/Delfadors_Memoirs/scenarios/05_Council_in_Weldyn.cfg
@@ -27,6 +27,7 @@
         team_name=allies
         user_team_name= _ "Loyalists"
         {FLAG_VARIANT loyalist}
+        # wmllint: who GARARD_II is Garard II
         [leader]
             {GARARD_II}
         [/leader]
@@ -62,6 +63,7 @@
             image=wesnoth-icon.png
         [/message]
         # Lionel's entrance
+        # wmllint: who LIONEL is Lionel
         [unit]
             side=2
             {LIONEL}
@@ -69,7 +71,6 @@
         [/unit]
         {MOVE_UNIT (id=Lionel) 26 19}
         {MODIFY_UNIT (id=Lionel) facing se}
-        # wmllint: recognize Lionel
         [message]
             speaker=Garard II
             message=_"Ah, now the last of my council is here. Lionel, what tidings from the north?"
@@ -143,4 +144,5 @@
             carryover_report=no
         [/endlevel]
     [/event]
+    # wmllint: unwho LEOLLYN
 [/scenario]
