--- a/data/campaigns/Delfadors_Memoirs/scenarios/10_The_Gate_Between_Worlds.cfg
+++ b/data/campaigns/Delfadors_Memoirs/scenarios/10_The_Gate_Between_Worlds.cfg
@@ -29,6 +29,7 @@
         team_name=enemies
         user_team_name= _ "Undead"
         {FLAG_VARIANT undead}
+        # wmllint: who ILIAH_MALAL is Iliah-Malal
         [leader]
             {ILIAH_MALAL (Necromancer)}
             facing=se
