--- a/data/campaigns/Delfadors_Memoirs/scenarios/13_The_Return_of_Trouble.cfg
+++ b/data/campaigns/Delfadors_Memoirs/scenarios/13_The_Return_of_Trouble.cfg
@@ -29,7 +29,6 @@
     [/story]
     {DM_TRACK {KALENZ_STAGE1}}
 
-    # wmllint: recognize Kalenz
     # wmllint: validate-off
     [side]
         side=1
@@ -40,13 +39,12 @@
         team_name=allies
         user_team_name= _ "Elves"
         {FLAG_VARIANT wood-elvish}
+        # wmllint: who KALENZ is Kalenz
         {KALENZ}
         canrecruit=yes
         facing=sw
     [/side]
     # wmllint: validate-on
-    # wmllint: recognize Chantal
-    # wmllint: recognize Delfador
 
     ### Protagonist switching ###
     [event]
