--- a/data/campaigns/Delfadors_Memoirs/scenarios/17_A_New_Ally.cfg
+++ b/data/campaigns/Delfadors_Memoirs/scenarios/17_A_New_Ally.cfg
@@ -55,6 +55,7 @@
         {ULREK}
         canrecruit=yes
         facing=se
+        # wmllint: who RELGORN is Relgorn
         [unit]
             {RELGORN}
             ai_special=guardian
@@ -241,4 +242,5 @@
     [/event]
 
     {MEMOIRS_DEATHS}
+    # wmllint: unwho RELGORN
 [/scenario]
