--- a/data/campaigns/Delfadors_Memoirs/scenarios/19_Showdown_in_the_Northern_Swamp.cfg
+++ b/data/campaigns/Delfadors_Memoirs/scenarios/19_Showdown_in_the_Northern_Swamp.cfg
@@ -39,7 +39,6 @@
         {YOUNG_DELFADOR}
         [unit]
             {ULREK}
-            # wmllint: unwho ULREK
             placement=leader
         [/unit]
     [/side]
@@ -505,4 +504,8 @@
     [/event]
 
     {MEMOIRS_DEATHS}
+    # wmllint: unwho ILIAH_MALAL
+    # wmllint: unwho ULREK
+    # wmllint: unwho LIONEL
+    # wmllint: unwho YOUNG_DELFADOR
 [/scenario]
