--- a/data/campaigns/Delfadors_Memoirs/scenarios/21_Clash_at_the_Manor.cfg
+++ b/data/campaigns/Delfadors_Memoirs/scenarios/21_Clash_at_the_Manor.cfg
@@ -49,6 +49,7 @@
         team_name=allies
         user_team_name= _ "Rebels"
         {FLAG_VARIANT long}
+        # wmllint: who OLD_DELFADOR is Delfador
         {OLD_DELFADOR}
         [unit]
             {KALENZ}
@@ -60,8 +61,6 @@
         [/unit]
     [/side]
     # wmllint: validate-on
-    # wmllint: recognize Kalenz
-    # wmllint: recognize Chantal
     [event]
         name=prestart
         {MODIFY_UNIT (side=1) facing ne}
