--- a/data/campaigns/Delfadors_Memoirs/scenarios/22_Face_of_the_Enemy.cfg
+++ b/data/campaigns/Delfadors_Memoirs/scenarios/22_Face_of_the_Enemy.cfg
@@ -26,7 +26,6 @@
     [side]
         side=1
         controller=human
-        # wmllint: unwho all
         recruit={ELVES}
         {GOLD 130 100 100}
         fog=yes
@@ -64,6 +63,7 @@
         team_name=enemies
         user_team_name= _ "Undead"
         {FLAG_VARIANT undead}
+        # wmllint: who SAGUS is sagus
         [leader]
             {SAGUS}
             facing=nw
@@ -222,4 +222,8 @@
     [/event]
 
     {MEMOIRS_DEATHS}
+    # wmllint: unwho SAGUS
+    # wmllint: unwho KALENZ
+    # wmllint: unwho CHANTAL
+    # wmllint: unwho OLD_DELFADOR
 [/scenario]
