--- a/data/campaigns/Delfadors_Memoirs/scenarios/11_Wasteland.cfg
+++ b/data/campaigns/Delfadors_Memoirs/scenarios/11_Wasteland.cfg
@@ -55,7 +55,7 @@
         team_name=allies
         user_team_name= _ "Elves"
         {FLAG_VARIANT wood-elvish}
-        # wmllint: recognize Chantal
+        # wmllint: who CHANTAL is Chantal
         [leader]
             {CHANTAL}
             facing=sw
