--- a/data/campaigns/Delfadors_Memoirs/scenarios/15_Save_the_King.cfg
+++ b/data/campaigns/Delfadors_Memoirs/scenarios/15_Save_the_King.cfg
@@ -95,6 +95,7 @@
         team_name=enemies
         user_team_name= _ "Pillagers"
         {FLAG_VARIANT6 ragged}
+        # wmllint: who ZORLAN is Zorlan
         [leader]
             {ZORLAN}
             facing=sw
@@ -383,4 +384,6 @@
     [/event]
 
     {MEMOIRS_DEATHS}
+    # wmllint: unwho GARARD_II
+    # wmllint: unwho ZORLAN
 [/scenario]
