NR 10: use 4 different Troll portraits
HttT: build house on sand. For safety and a long future.

--- a/data/campaigns/Northern_Rebirth/scenarios/10a_Stolen_Gold.cfg
+++ b/data/campaigns/Northern_Rebirth/scenarios/10a_Stolen_Gold.cfg
@@ -217,7 +217,7 @@
         team_name=trolls
         user_team_name= _ "Trolls"
 
-        type=Troll Warrior
+        type=Troll Hero
         id=Bor
         name= _ "Bor"
         canrecruit=yes
@@ -234,7 +234,7 @@
         team_name=trolls
         user_team_name= _ "Trolls"
 
-        type=Troll Warrior
+        type=Troll Rocklobber
         id=Oof
         name= _ "Oof"
         canrecruit=yes
@@ -251,7 +251,8 @@
         team_name=trolls
         user_team_name= _ "Trolls"
 
-        type=Troll Warrior
+        type=Troll Hero
+        profile=portraits/trolls/troll-hero-alt.png
         id=Glu
         name= _ "Glu"
         canrecruit=yes
