--- a/data/campaigns/Northern_Rebirth/scenarios/10a_Stolen_Gold.cfg
+++ b/data/campaigns/Northern_Rebirth/scenarios/10a_Stolen_Gold.cfg
@@ -216,7 +216,7 @@
         team_name=trolls
         user_team_name= _ "Trolls"
 
-        type=Troll Warrior
+        type=Troll Hero
         id=Bor
         name= _ "Bor"
         canrecruit=yes
@@ -233,7 +233,7 @@
         team_name=trolls
         user_team_name= _ "Trolls"
 
-        type=Troll Warrior
+        type=Troll Rocklobber
         id=Oof
         name= _ "Oof"
         canrecruit=yes
@@ -250,7 +250,8 @@
         team_name=trolls
         user_team_name= _ "Trolls"
 
-        type=Troll Warrior
+        type=Troll Hero
+        profile=portraits/trolls/troll-hero-alt.png
         id=Glu
         name= _ "Glu"
         canrecruit=yes
