NR 10: more resistent event
works only with id, not with speaker

--- a/data/campaigns/Northern_Rebirth/scenarios/10a_Stolen_Gold.cfg
+++ b/data/campaigns/Northern_Rebirth/scenarios/10a_Stolen_Gold.cfg
@@ -666,12 +666,12 @@
         [/message]
 
         [message]
-            speaker=Oof
+            id=Oof,Tor
             message= _ "What?! Drakes?! Fire! Aagghh!"
         [/message]
 
         [message]
-            speaker=Glu
+            id=Glu,Bor
             message= _ "Shut your mouth, you coward!"
         [/message]
 
@@ -807,7 +807,7 @@
         [/terrain]
 
         [message]
-            speaker=Oof
+            id=Oof,Glu,Tor
             message= _ "Oh no! Those blasted elves have just joined forces with the humans! This is hopeless! Flee! Flee!"
         [/message]
 
@@ -932,7 +932,7 @@
         [/message]
 
         [message]
-            speaker=Oof
+            id=Oof,Glu,Tor
             message= _ "Oh no! The elves have just given the humans a hoard of gold! This is hopeless! Flee! Flee!"
         [/message]
 
