--- a/data/campaigns/Northern_Rebirth/scenarios/12a_Get_the_Gold.cfg
+++ b/data/campaigns/Northern_Rebirth/scenarios/12a_Get_the_Gold.cfg
@@ -295,7 +295,7 @@
                 [/terrain]
 
                 [modify_side]
-                    sie=4
+                    side=4
                     hidden=yes
                 [/modify_side]
 
@@ -366,7 +366,7 @@
             [/then]
             [else]
                 [modify_side]
-                    sie=5
+                    side=5
                     hidden=yes
                 [/modify_side]
             [/else]
