ANL: get name from player instead of leader

--- a/data/multiplayer/scenarios/4p_A_New_Land.cfg
+++ b/data/multiplayer/scenarios/4p_A_New_Land.cfg
@@ -420,10 +420,7 @@
     [event]
         name=new turn
         first_time_only=no
-        {SET_NAMES 1}
-        {SET_NAMES 2}
-        {SET_NAMES 3}
-        {SET_NAMES 4}
+        {SET_NAMES}
     [/event]
 
     # Rescuing trapped units
