--- a/data/multiplayer/scenarios/ANL_utils/ANL_special_macros.cfg
+++ b/data/multiplayer/scenarios/ANL_utils/ANL_special_macros.cfg
@@ -38,31 +38,28 @@
     [/show_if]
 #enddef
 
-#define SET_NAMES SIDE
-    [if]
-        [have_unit]
-            side={SIDE}
+#define SET_NAMES
+    [store_side]
+        team_name=settlers
+        [has_unit]
             canrecruit=yes
-        [/have_unit]
-        [then]
-            [store_unit]
-                [filter]
-                    side={SIDE}
-                    canrecruit=yes
-                [/filter]
-                variable=leader
-            [/store_unit]
+        [/has_unit]
+        variable=sides
+    [/store_side]
 
+    [foreach]
+        array=sides
+        [do]
             [set_variable]
-                name=player_{SIDE}.name
-                value=$leader.name
+                name=player_$this_item.side|.name
+                value=$this_item.current_player
             [/set_variable]
+        [/do]
+    [/foreach]
 
-            [clear_variable]
-                name=leader
-            [/clear_variable]
-        [/then]
-    [/if]
+    [clear_variable]
+        name=sides
+    [/clear_variable]
 #enddef
 
 #define SET_SIDE_VARIABLES SIDE
