--- a/data/campaigns/Heir_To_The_Throne/scenarios/20b_Underground_Channels.cfg
+++ b/data/campaigns/Heir_To_The_Throne/scenarios/20b_Underground_Channels.cfg
@@ -253,7 +253,7 @@
 
                 [message]
                     speaker=Kalenz
-                    message= _ "Change is coming to the human lands. We rush to Elensiria seeking assistance, and the perils of the Longlier presented the quickest route."
+                    message= _ "Change is coming to the human lands. We rush to Elensiria seeking assistance, and the perils of the Arkan-thoria presented the quickest route."
                 [/message]
 
                 [message]
