Revert "ANL: also protect Guardians from losing defense by luring out"
This reverts commit 5133875b01f18d26e4bd28c6044ae815a0e69b2e.

--- a/data/multiplayer/scenarios/4p_A_New_Land.cfg
+++ b/data/multiplayer/scenarios/4p_A_New_Land.cfg
@@ -547,7 +547,7 @@
     [/event]
 
     # Make AI units destroy player’s buildings
-    # (AI leaders and Level 2 guardians are excluded to not lower their defense)
+    # (AI leaders are excluded to not lower their defense)
 
     # Villages
     [event]
@@ -559,9 +559,6 @@
             [filter_location]
                 terrain=Gg^Vh
             [/filter_location]
-            [not]
-                status=guardian
-            [/not]
         [/filter]
         {MODIFY_TERRAIN "Rd" $x1 $y1}
         {PLACE_IMAGE "scenery/village-human-burned2.png" $x1 $y1 }
@@ -597,9 +594,6 @@
             [filter_location]
                 terrain=Gg^Ve,Gg^Vea,Ch,Ce,Cv,Chr,Chw,Chs,Ke,Kv,Kh,Khr
             [/filter_location]
-            [not]
-                status=guardian
-            [/not]
         [/filter]
         {MODIFY_TERRAIN "Rd" $x1 $y1}
         {PLACE_IMAGE "scenery/rubble.png" $x1 $y1}
@@ -621,9 +615,6 @@
             [filter_location]
                 terrain=Hh^Vhh
             [/filter_location]
-            [not]
-                status=guardian
-            [/not]
         [/filter]
         {MODIFY_TERRAIN "Hh" $x1 $y1}
         [sound]
@@ -644,9 +635,6 @@
             [filter_location]
                 terrain=Mm^Vhh
             [/filter_location]
-            [not]
-                status=guardian
-            [/not]
         [/filter]
         {MODIFY_TERRAIN "Mm" $x1 $y1}
         [sound]
