UtBS S9: fixed typo
[ci skip]

--- a/data/campaigns/Under_the_Burning_Suns/scenarios/09_Blood_is_Thicker_Than_Water.cfg
+++ b/data/campaigns/Under_the_Burning_Suns/scenarios/09_Blood_is_Thicker_Than_Water.cfg
@@ -1855,7 +1855,7 @@
         [/message]
         [message]
             speaker=Nym
-            message= _ "I have followed you this far Kaleh, I will not abandon you now. But I admit that my faith is shaken. If that is not our god, than what is it?"
+            message= _ "I have followed you this far Kaleh, I will not abandon you now. But I admit that my faith is shaken. If that is not our god, then what is it?"
         [/message]
         [message]
             speaker=Kaleh
