--- a/data/schema/core/addons.cfg
+++ b/data/schema/core/addons.cfg
@@ -294,8 +294,19 @@
 	{SIMPLE_KEY victory_music string}
 	{SIMPLE_KEY theme string_list}
 	{DEFAULT_KEY victory_when_enemies_defeated bool yes}
-    {SIMPLE_KEY carryover_percentage int}
-	{SIMPLE_KEY carryover_add bool}
+    [if]
+		[not]
+			victory_when_enemies_defeated=no
+		[/not]
+		[then]
+			{SIMPLE_KEY carryover_percentage int}
+			{SIMPLE_KEY carryover_add bool}
+		[/then]
+        [else]
+            {DEFAULT_KEY carryover_percentage int 40}
+			{DEFAULT_KEY carryover_add bool yes}
+        [/else]
+	[/if]
 	{DEFAULT_KEY remove_from_carryover_on_defeat bool yes}
 	{DEFAULT_KEY disallow_recall bool no}
 	{DEFAULT_KEY experience_modifier int_percent 100}
