fix default value

--- a/data/schema/core/addons.cfg
+++ b/data/schema/core/addons.cfg
@@ -303,8 +303,8 @@
 			{SIMPLE_KEY carryover_add bool}
 		[/then]
         [else]
-            {DEFAULT_KEY carryover_percentage int 40}
-			{DEFAULT_KEY carryover_add bool yes}
+            {DEFAULT_KEY carryover_percentage int 80}
+			{DEFAULT_KEY carryover_add bool no}
         [/else]
 	[/if]
 	{DEFAULT_KEY remove_from_carryover_on_defeat bool yes}
