AToTB S3: modify illumination tip

--- a/data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg
+++ b/data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg
@@ -767,7 +767,7 @@ Yet for some reason I fear these brothers more. If Mordak were here it would be 
 #ifdef EASY
         [message]
             speaker=narrator
-            message= _ "This castle is under a constant, <i>chaotic</i> time of day (equivalent to permanent night). Place your units carefully, as your troops will be weaker and enemy units stronger."
+            message= _ "This castle is under a constant, <i>chaotic</i> time of day (equivalent to permanent night), except for illuminated hexes adjacent to lit stone walls (neutral time of day). Place your units carefully, as your troops will be weaker and enemy units stronger."
             image=wesnoth-icon.png
         [/message]
 #endif
