ANL: alternative solution for Guard Problem
This avoids not only luring them on weak terrain,
but also luring them out of the way.

--- a/data/multiplayer/scenarios/ANL_utils/ANL_special_macros.cfg
+++ b/data/multiplayer/scenarios/ANL_utils/ANL_special_macros.cfg
@@ -243,7 +243,7 @@
     {GUARDIAN}
     [+unit]
         [+modifications]
-            {MOVEMENT_RESTRICTION}
+            {MOVEMENT_RESTRICTION_FULL}
         [/modifications]
     [/unit]
 #enddef
@@ -254,7 +254,7 @@
     {GUARDIAN}
     [+unit]
         [+modifications]
-            {MOVEMENT_RESTRICTION}
+            {MOVEMENT_RESTRICTION_FULL}
             {TRAIT_LOYAL}
         [/modifications]
     [/unit]
