--- a/data/multiplayer/scenarios/ANL_utils/ANL_general_macros.cfg
+++ b/data/multiplayer/scenarios/ANL_utils/ANL_general_macros.cfg
@@ -9,15 +9,47 @@
 #enddef
 
 #define MOVEMENT_RESTRICTION
+    # to avoid luring onto unprotected terrain, can still move in castles
     [object]
         silent=yes
-        duration=forever
+        duration=scenario
         [effect]
             apply_to=movement_costs
             replace=true
             [movement_costs]
                 flat={UNREACHABLE}
+                frozen={UNREACHABLE}
+                cave={UNREACHABLE}
+                reef={UNREACHABLE}
                 sand={UNREACHABLE}
+                shallow_water={UNREACHABLE}
+                swamp_water={UNREACHABLE}
+                deep_water={UNREACHABLE}
+            [/movement_costs]
+        [/effect]
+    [/object]
+#enddef
+
+#define MOVEMENT_RESTRICTION_FULL
+    # to avoid luring onto destroyable buildings or out of position
+    [object]
+        silent=yes
+        duration=scenario
+        [effect]
+            apply_to=movement_costs
+            replace=true
+            [movement_costs]
+                castle={UNREACHABLE}
+                village={UNREACHABLE}
+                flat={UNREACHABLE}
+                mountains={UNREACHABLE}
+                frozen={UNREACHABLE}
+                cave={UNREACHABLE}
+                hills={UNREACHABLE}
+                reef={UNREACHABLE}
+                fungus={UNREACHABLE}
+                sand={UNREACHABLE}
+                forest={UNREACHABLE}
                 shallow_water={UNREACHABLE}
                 swamp_water={UNREACHABLE}
                 deep_water={UNREACHABLE}
