TSG: use colors for the narrator,
highligthing game explanations and storytelling with different colors.

This has originally been done for the German translation in 1.14.5 by Chewan.

--- a/data/campaigns/The_South_Guard/scenarios/02_Proven_by_the_Sword.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/02_Proven_by_the_Sword.cfg
@@ -421,7 +421,7 @@
 
                 [message]
                     speaker=narrator
-                    message= _ "You must move someone here by the end of the next turn, or Westin will fall and you will be defeated!"
+                    {TUTOR: _"You must move someone here by the end of the next turn, or Westin will fall and you will be defeated!"}
                     image=wesnoth-icon.png
                 [/message]
 #endif
@@ -552,7 +552,7 @@
                 [message]
                     speaker=narrator
                     image="units/merfolk/hunter.png~RC(magenta>red)"
-                    message= _ "You may now recruit Merman Hunters. Merfolk are aquatic creatures and fight best in rivers and swamps. They are much less effective on dry land."
+                    {TUTOR: _"You may now recruit Merman Hunters. Merfolk are aquatic creatures and fight best in rivers and swamps. They are much less effective on dry land."}
                 [/message]
 #endif
 
@@ -607,7 +607,7 @@
             [message]
                 speaker=narrator
                 image="units/human-magi/white-mage-magic-1.png~RC(magenta>red)"
-                message= _ "Minister Hylas can heal allied units near him and his <i>arcane</i> attack deals bonus damage to undead foes."
+                {TUTOR: _"Minister Hylas can heal allied units near him and his <i>arcane</i> attack deals bonus damage to undead foes."}
                 scroll=no
             [/message]
 #endif
