--- a/data/campaigns/The_South_Guard/scenarios/06a_Into_the_Depths.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/06a_Into_the_Depths.cfg
@@ -388,12 +388,12 @@
 #ifdef EASY
         [message]
             speaker=narrator
-            message= _ "Cavalrymen and Dragoons will be less useful underground than soldiers who fight on foot."
+            {TUTOR: _"Cavalrymen and Dragoons will be less useful underground than soldiers who fight on foot."}
             image=wesnoth-icon.png
         [/message]
         [message]
             speaker=narrator
-            message= _ "Soldiers with the <i>quick</i> trait will be useful for traversing rough caverns."
+            {TUTOR: _"Soldiers with the <i>quick</i> trait will be useful for traversing rough caverns."}
             image=wesnoth-icon.png
         [/message]
 #endif
