--- a/data/campaigns/The_South_Guard/scenarios/06b_The_Long_March.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/06b_The_Long_March.cfg
@@ -497,7 +497,7 @@ _f, _f, Re, _f
 
         [message]
             speaker=narrator
-            message= _ "Deoran and Urza Afalas retreated quickly from Mebrin's fortress..."
+            {NARRATOR: _"Deoran and Urza Afalas retreated quickly from Mebrin's fortress..."}
             image=wesnoth-icon.png
         [/message]
 
