--- a/data/campaigns/The_South_Guard/scenarios/08a_Vengeance.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/08a_Vengeance.cfg
@@ -159,7 +159,7 @@
         [message]
             speaker=narrator
             message= _ "Help!"
-            image=wesnoth-icon.png
+            image=none
         [/message]
 
         [scroll_to_unit]
@@ -169,7 +169,7 @@
         [message]
             speaker=narrator
             message= _ "Help!"
-            image=wesnoth-icon.png
+            image=none
         [/message]
         [move_unit_fake]
             type=Peasant
