--- a/data/campaigns/The_South_Guard/scenarios/01_Born_to_the_Banner.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/01_Born_to_the_Banner.cfg
@@ -169,7 +169,7 @@
         name=start
         [message]
             speaker=narrator
-            message= _ "Upon arrival, Deoran found the land completely overrun by bandits."
+            {NARRATOR: _"Upon arrival, Deoran found the land completely overrun by bandits."}
             image=wesnoth-icon.png
         [/message]
 
@@ -226,7 +226,7 @@
         [message]
             speaker=narrator
             image=items/gohere.png
-            message= _ "Whenever you see a target that looks like this, you should move your leader (or whatever unit the dialog just suggested) onto the hex that contains it."
+            {TUTOR: _"Whenever you see a target that looks like this, you should move your leader (or whatever unit the dialog just suggested) onto the hex that contains it."}
         [/message]
 #endif
 
@@ -294,13 +294,13 @@
         [message]
             speaker=narrator
             image="units/infantry-commander.png~RC(magenta>red)"
-            message= _ "As a senior infantry officer, Sir Gerrick is both a powerful warrior and capable leader, raising the fighting spirit of less experienced troops near him and causing their attacks to deal more damage."
+            {TUTOR: _"As a senior infantry officer, Sir Gerrick is both a powerful warrior and capable leader, raising the fighting spirit of less experienced troops near him and causing their attacks to deal more damage."}
         [/message]
 
         [message]
             speaker=narrator
             image="misc/hero-icon.png"
-            message= _ "Units that have a <i>hero</i> marker are vital to your campaign. If any of them die, you will lose the scenario, so guard them carefully!"
+            {TUTOR: _"Units that have a <i>hero</i> marker are vital to your campaign. If any of them die, you will lose the scenario, so guard them carefully!"}
         [/message]
 #endif
 
@@ -325,7 +325,7 @@
                         [message]
                             speaker=narrator
                             image=items/gohere.png
-                            message= _ "Head back to the encampment where you started and recruit some troops!"
+                            {TUTOR: _"Head back to the encampment where you started and recruit some troops!"}
                         [/message]
 
                         [event]
@@ -378,22 +378,22 @@
 
         [message]
             speaker=narrator
-            message= _ "While you are in your camp, you can recruit more units. Build an army to use against the bandits that Urza Mathin recruits."
+            {TUTOR: _"While you are in your camp, you can recruit more units. Build an army to use against the bandits that Urza Mathin recruits."}
             image=wesnoth-icon.png
         [/message]
         [message]
             speaker=narrator
             image="units/human-loyalists/bowman.png~RC(magenta>red)"
-            message= _ "Bowmen have a strong ranged attack and are very effective against units that lack a ranged attack, like Thieves and Thugs. They also carry a sword and can defend themselves against melee attacks."
+            {TUTOR: _"Bowmen have a strong ranged attack and are very effective against units that lack a ranged attack, like Thieves and Thugs. They also carry a sword and can defend themselves against melee attacks."}
         [/message]
         [message]
             speaker=narrator
             image="units/human-loyalists/spearman.png~RC(magenta>red)"
-            message= _ "Spearmen have a strong melee attack and are effective against most units. They also have a weak ranged attack. They form the backbone of the South Guard."
+            {TUTOR: _"Spearmen have a strong melee attack and are effective against most units. They also have a weak ranged attack. They form the backbone of the South Guard."}
         [/message]
         [message]
             speaker=narrator
-            message= _ "The best army will have a mix of units to deal with the different enemies that you will encounter. For now, concentrate on creating a small corps of experienced Bowmen."
+            {TUTOR: _"The best army will have a mix of units to deal with the different enemies that you will encounter. For now, concentrate on creating a small corps of experienced Bowmen."}
             image=wesnoth-icon.png
         [/message]
     [/event]
@@ -462,7 +462,7 @@
         [message]
             speaker=narrator
             image="units/merfolk/hunter.png~RC(magenta>red)"
-            message= _ "You may now recruit Merman Hunters. Merfolk are aquatic creatures and fight best in rivers and swamps. They are much less effective on dry land."
+            {TUTOR: _"You may now recruit Merman Hunters. Merfolk are aquatic creatures and fight best in rivers and swamps. They are much less effective on dry land."}
         [/message]
 #endif
 
@@ -492,7 +492,7 @@
                 [message]
                     speaker=narrator
                     image=misc/time-schedules/default/schedule-firstwatch.png
-                    message= _ "All of your units are <i>lawful</i>. This means that they receive a combat bonus during the day and a penalty at night. Urza Mathin’s units are all <i>chaotic</i>, which means that they receive a bonus at night and a penalty during the day. You will be much more effective fighting during the day."
+                    {TUTOR: _"All of your units are <i>lawful</i>. This means that they receive a combat bonus during the day and a penalty at night. Urza Mathin’s units are all <i>chaotic</i>, which means that they receive a bonus at night and a penalty during the day. You will be much more effective fighting during the day."}
                 [/message]
             [/then]
         [/if]
@@ -524,7 +524,7 @@
         [message]
             speaker=narrator
             image=misc/time-schedules/default/schedule-dawn.png
-            message= _ "During the day, your units will deal more damage and the bandits will deal less. The more of Urza Mathin’s troops you can defeat during the day, the better."
+            {TUTOR: _"During the day, your units will deal more damage and the bandits will deal less. The more of Urza Mathin’s troops you can defeat during the day, the better."}
         [/message]
 #endif
     [/event]
@@ -570,7 +570,7 @@
         [/message]
         [message]
             speaker=narrator
-            message= _ "Aleron is a Longbowman, stronger and better trained than regular bowmen. His arrows are deadly to enemies without a ranged attack."
+            {TUTOR: _"Aleron is a Longbowman, stronger and better trained than regular bowmen. His arrows are deadly to enemies without a ranged attack."}
             image="units/human-loyalists/longbowman.png~RC(magenta>red)"
         [/message]
 #endif
@@ -642,7 +642,7 @@
                 [message]
                     speaker=narrator
                     image=items/gohere.png
-                    message= _ "Remember, Moreth told you that you should go meet Sir Gerrick at the river fort. Move Deoran there and find out what Sir Gerrick has to say!"
+                    {TUTOR: _"Remember, Moreth told you that you should go meet Sir Gerrick at the river fort. Move Deoran there and find out what Sir Gerrick has to say!"}
                 [/message]
             [/then]
         [/if]
@@ -675,7 +675,7 @@
                 [message]
                     speaker=narrator
                     image="units/human-outlaws/bandit.png~RC(magenta>red)"
-                    message= _ "Remember, your job is to defeat Urza Mathin. He should be your main target. Archers will be especially effective against him because he has no ranged attack."
+                    {TUTOR: _"Remember, your job is to defeat Urza Mathin. He should be your main target. Archers will be especially effective against him because he has no ranged attack."}
                 [/message]
             [/then]
         [/if]
