TSG: use colors for the narrator,
highligthing game explanations and storytelling with different colors.

This has originally been done for the German translation in 1.14.5 by Chewan.

--- a/data/campaigns/The_South_Guard/_main.cfg
+++ b/data/campaigns/The_South_Guard/_main.cfg
@@ -18,7 +18,7 @@
     image="data/campaigns/The_South_Guard/images/campaign_image.png"
     description= _ "A young knight, Deoran, is dispatched to the southern Wesnoth province of Kerlath to investigate the ravaged towns at the border. Thrust quickly into a hapless conflict against marauding bandits, Deoran must rally the remaining men of the derelict South Guard to defend his country.
 
-This campaign is designed as an introduction to Wesnoth. The ‘Civilian’ difficulty level is aimed at first-time players.
+" + <span color='gray'> + _ "This campaign is designed as an introduction to Wesnoth. The ‘Civilian’ difficulty level is aimed at first-time players." + </span> + "
 
 " + _"(Rookie level, 9 scenarios.)"
 
@@ -81,7 +81,10 @@ This campaign is designed as an introduction to Wesnoth. The ‘Civilian’ diff
     path=data/campaigns/The_South_Guard
 [/binary_path]
 
-{campaigns/The_South_Guard/utils}
+{campaigns/The_South_Guard/utils/sg_utils.cfg}
+{campaigns/The_South_Guard/utils/sg_story.cfg}
+{campaigns/The_South_Guard/utils/bigmap.cfg}
+
 
 [units]
     {campaigns/The_South_Guard/units}
