--- a/data/campaigns/The_South_Guard/scenarios/05_Choice_In_The_Fog.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/05_Choice_In_The_Fog.cfg
@@ -279,12 +279,12 @@
         [message]
             speaker=narrator
             image="units/elves-wood/fighter-melee-2.png~RC(magenta>red)"
-            message= _ "You may now recruit Elvish Fighters. Elvish Fighters are mixed fighters who skillfully wield both a sword and a bow. They are fast warriors and especially effective in forests."
+            {TUTOR: _"You may now recruit Elvish Fighters. Elvish Fighters are mixed fighters who skillfully wield both a sword and a bow. They are fast warriors and especially effective in forests."}
         [/message]
         [message]
             speaker=narrator
             image="units/elves-wood/shaman-heal7.png~RC(magenta>red)"
-            message= _ "You may now recruit Elvish Shamans. Elvish Shamans are ranged support units who heal adjacent allies every turn and slow their enemies. Use them to heal wounded soldiers and weaken enemy units."
+            {TUTOR: _"You may now recruit Elvish Shamans. Elvish Shamans are ranged support units who heal adjacent allies every turn and slow their enemies. Use them to heal wounded soldiers and weaken enemy units."}
         [/message]
 #endif
 
