--- a/data/campaigns/The_South_Guard/scenarios/07b_Pebbles_in_the_Flood.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/07b_Pebbles_in_the_Flood.cfg
@@ -348,7 +348,7 @@
 
         [message]
             speaker=narrator
-            message= _ "Hold off the undead hordes and keep Sir Gerrick alive as long as you can. Starting on turn 6, every turn that passes strengthens the defenses of Westin."
+            {TUTOR: _"Hold off the undead hordes and keep Sir Gerrick alive as long as you can. Starting on turn 6, every turn that passes strengthens the defenses of Westin."}
             image=wesnoth-icon.png
         [/message]
     [/event]
