--- a/data/campaigns/The_South_Guard/scenarios/08b_The_Tides_of_War.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/08b_The_Tides_of_War.cfg
@@ -595,7 +595,7 @@
         [/message]
         [message]
             speaker=narrator
-            message= _ "Every unit you lose will give the undead some gold. Protect your troops and sustain as few losses as possible!"
+            {TUTOR: _"Every unit you lose will give the undead some gold. Protect your troops and sustain as few losses as possible!"}
             image=wesnoth-icon.png
         [/message]
     [/event]
