--- a/data/campaigns/The_South_Guard/scenarios/09a_Vengeance.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/09a_Vengeance.cfg
@@ -158,7 +158,7 @@
         [message]
             speaker=narrator
             message= _ "Help!"
-            image=wesnoth-icon.png
+            image=none
         [/message]
 
         [scroll_to_unit]
@@ -168,7 +168,7 @@
         [message]
             speaker=narrator
             message= _ "Help!"
-            image=wesnoth-icon.png
+            image=none
         [/message]
         [move_unit_fake]
             type=Peasant
