Fire Dragon: remove workaround
This works fine for the help, but has a drawback if animations are turned off.

--- a/data/core/units/monsters/Fire_Dragon.cfg
+++ b/data/core/units/monsters/Fire_Dragon.cfg
@@ -3,15 +3,8 @@
     id=Fire Dragon
     name= _ "Fire Dragon"
     race=monster
+    image="units/monsters/fire-dragon.png"
     profile="portraits/monsters/fire-dragon.png"
-    # workaround to cut the transparent part when displayed in the help
-    image="units/monsters/fire-dragon.png~CROP(3,0,154,154)"
-    [standing_anim]
-        start_time=0
-        [frame]
-            image="units/monsters/fire-dragon.png:200"
-        [/frame]
-    [/standing_anim]
     {DEFENSE_ANIM_RANGE "units/monsters/fire-dragon.png" "units/monsters/fire-dragon.png" {SOUND_LIST:DRAKE_HIT} melee}
     [abilities]
         {ABILITY_LEADERSHIP}
