ANL: activate experimental AI

--- a/data/multiplayer/scenarios/4p_A_New_Land.cfg
+++ b/data/multiplayer/scenarios/4p_A_New_Land.cfg
@@ -128,6 +128,7 @@
         [ai]
             aggression=1.0
             recruitment_pattern=fighter
+            ai_algorithm=experimental_ai
         [/ai]
         [village]
             x,y=10,25
@@ -159,6 +160,7 @@
         [ai]
             aggression=1.0
             recruitment_pattern=fighter
+            ai_algorithm=experimental_ai
         [/ai]
         [village]
             x,y=50,25
@@ -190,6 +192,7 @@
         [ai]
             aggression=1.0
             recruitment_pattern=fighter
+            ai_algorithm=experimental_ai
         [/ai]
         [village]
             x,y=10,30
@@ -221,6 +224,7 @@
         [ai]
             aggression=1.0
             recruitment_pattern=fighter
+            ai_algorithm=experimental_ai
         [/ai]
         [village]
             x,y=50,30
@@ -240,6 +244,7 @@
         share_vision=none
         team_name=settlers,enemies,monsters
         user_team_name= _ "teamname^Prisoners"
+        gold=0
         income=-2
         village_gold=0
         team_lock=yes
@@ -275,6 +280,7 @@
         [ai]
             aggression=1.0
             village_value=0
+            ai_algorithm=experimental_ai
             # avoiding the AI guards in case it's lured out
             [avoid]
                 x=26,34,26,34
