--- a/data/multiplayer/scenarios/ANL_utils/ANL_special_macros.cfg
+++ b/data/multiplayer/scenarios/ANL_utils/ANL_special_macros.cfg
@@ -191,10 +191,12 @@
         [/filter]
 
         [message]
+            side_for=$side_number
             speaker=unit
             message= _ "Let’s cut you free!"
         [/message]
         [message]
+            side_for=$side_number
             speaker=narrator
             message= _ "You release the creature from the web and it agrees to help you."
             image=wesnoth-icon.png
