--- a/data/core/units/monsters/Mudcrawler.cfg
+++ b/data/core/units/monsters/Mudcrawler.cfg
@@ -7,6 +7,7 @@
     {TRAIT_ELEMENTAL}
     image="units/monsters/mudcrawler.png"
     profile="portraits/monsters/mudcrawler.png"
+    small_profile="portraits/monsters/mudcrawler.png~CROP(0,63,400,337)"
     hitpoints=20
     movement_type=scuttlefoot
     movement=3
